2000-01-10  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/bios.c (NO_INT13_FALLBACK): Undefined.
	(get_diskinfo) [!NO_BUGGY_BIOS_IN_THE_WORLD]: Do not check if
	bit 0 in DRP.FLAGS is set, because at least one BIOS does not
	set it correctly. Reported by "Forever shall I be."
	<zinx@linuxfreak.com>.

	* util/grub-install.in: Handle the new options `--root' and
	`--grub-shell'.
	(rootdir): New variable.
	(usage): Print the help messages about the options --root and
	--grub-shell.
	(bootdir): Initialized after the option analysis.
	(grubdir): Likewise.
	(device_map): Likewise.
	(root_device): Set to the result for the directory ROOTDIR
	instead of "/".
	* docs/user-ref.texi (Invoking grub-install): Added the
	descriptions about --root and --grub-shell.
	* docs/grub-install.8: Regenerated.
	
2000-01-08  OKUJI Yoshinori  <okuji@gnu.org>

	* util/grub-install.in (grubdir_device): New variable.
	If GRUBDIR_DEVICE is not equal to ROOT_DEVICE, print an error
	message and exit.
	* README: Added a caution about Automake.
	* TODO: Updated. Only the things that should be done until 0.6
	have one or more exclamations. Things with zero exclamation
	will be done after 0.6 unless someone sends a patch for it.
	
2000-01-05  OKUJI Yoshinori  <okuji@gnu.org>

	* grub/asmstub.c: Include the header shared.h after including
	all the system headers, but not before.
	(EXTENDED_MEMSIZE): Reduced to 3MB.
	(grub_setjmp): New function.
	(grub_longjmp): Likewise.
	* grub/main.c: Include setjmp.h.
	* stage2/asm.S (grub_setjmp): New function. Stolen from the
	OSKit (which stole it from Mach).
	(grub_longjmp): Likewise.
	* stage2/shared.h [GRUB_UTIL] (grub_jmp_buf): New type.
	[!GRUB_UTIL] (grub_jmp_buf): New macro. Defined as jmp_buf.
	(grub_setjmp): Declared.
	(grub_longjmp): Likewise.
	(restart_env): Likewise.
	* stage2/builtins.c (configfile_func): Use grub_longjmp instead
	of invoking cmain again.
	* stage2/stage2.c (restart_env): New variable.